<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.NovoFilmeActivity"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imgNovoFilme"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/imgNovoFilme"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fAddFilme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_add_photo_24dp" />

        <EditText
            android:id="@+id/etNomeFilme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/nomeFilme"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgIconeNome"
            app:layout_constraintTop_toBottomOf="@+id/imgNovoFilme" />

        <EditText
            android:id="@+id/etAnoLanc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/anoLanc"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgIconeAno"
            app:layout_constraintTop_toBottomOf="@+id/etNomeFilme" />

        <EditText
            android:id="@+id/etNumEpisodio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/numEpisodio"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgIconeEpisodio"
            app:layout_constraintTop_toBottomOf="@+id/etAnoLanc" />

        <Spinner
            android:id="@+id/sCategoria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgIconeCategoria"
            app:layout_constraintTop_toBottomOf="@+id/etNumEpisodio" />

        <ImageView
            android:id="@+id/imgIconeNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/imgIconeNome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etNomeFilme"
            app:srcCompat="@drawable/ic_nome_24dp" />

        <ImageView
            android:id="@+id/imgIconeAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/iconeAno"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etAnoLanc"
            app:srcCompat="@drawable/ic_today_24dp" />

        <ImageView
            android:id="@+id/imgIconeEpisodio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/iconeEpisodio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etNumEpisodio"
            app:srcCompat="@drawable/ic_episodio_24dp" />

        <ImageView
            android:id="@+id/imgIconeCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/iconeCategoria"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sCategoria"
            app:srcCompat="@drawable/ic_categoria_24dp" />
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>